--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
 
-URI = "mongodb+srv://root:admintodolist@cluster0.bwg7nrv.mongodb.net/?retryWrites=true&w=majority"
+DB_URI = "mongodb+srv://root:admintodolist@cluster0.bwg7nrv.mongodb.net/?retryWrites=true&w=majority"
