--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongoose": "^6.7.0",
-    "nodemon": "^2.0.20",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
-
+    "nodemon": "^2.0.20"
   }
 }
