--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index"
+    "dev:server": "node serverTest/server.js"
   },
   "repository": {
     "type": "git",
