--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "ToDo list",
   "main": "app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev:server": "node index.js"
   },
   "repository": {
     "type": "git",
