--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT = "todolist-production-9b05.up.railway.app"
+PORT = 3000
 
 DB_URI = "mongodb+srv://root:admintodolist@cluster0.bwg7nrv.mongodb.net/?retryWrites=true&w=majority"
